--- a/angular.json
+++ b/angular.json
@@ -91,6 +91,7 @@
               }
             ],
             "styles": [
+              "bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
